--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   animated_text_kit: ^2.0.0
   clay_containers: ^0.2.2
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
