--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   animated_text_kit: ^2.0.0
   clay_containers: ^0.2.2
   provider: ^4.0.4
+  flutter_svg: ^0.17.3+1
 
 dev_dependencies:
   flutter_test:
